Changelog
=========

0.4 - Unreleased
----------------

0.3 - 2008-07-24
----------------

* Create this package from Plone-specific bits that have been factored
  out of plone.z3cform.